# refraktor

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: test-build.yml
assets/denoise_weights/: 2024-03-29-14-53-00.tza
assets/flames_test/: electricsheep.247.50049.flam3
assets/kernels/: avg.cu  catmull.cu  convert.cu  density_histo.cu  flame.cu  flamelib.cu  refactor - Copy.cu  refactor.cu  refactor2.cu  size_info.cu  smooth.cu  test.cu  test_cleanup.cu  test_flamelib.cu  test_nogridsync - Copy.cu  test_nogridsync.cu  test_sep.cu  test_sep.cu.bak.cu  test_shared.cu  tonemap.cu
assets/kernels/ezrtc_std/: iterator  limits  stdint.h  type_traits  utility
assets/kernels/include/refrakt/: color.h  flamelib.h  hammersley.h  precision.h  random.h
assets/static/: muxer - Copy.html  muxer.html
assets/templates/: flame.tpl
build_scripts/: get_runtime_deps.py  make_dist.py
config/: common.yml  styles.yml  variations.yml  variations_new.yml
librefrakt/: CMakeLists.txt
librefrakt/depend/eznve/src/: eznve.cpp
librefrakt/depend/flang/: CMakeLists.txt
librefrakt/depend/flang/include/flang/: ast.h  ast_node.h  grammar.h  matcher.h
librefrakt/depend/flang/src/: ast.cpp  grammar.cpp  grammar_defs.h
librefrakt/include/: eznve.hpp  ezrtc.h
librefrakt/include/librefrakt/: animators.h  cuda_buffer.h  flame_compiler.h  flame_info.h  flame_types.h  kernel_cache.h  kernel_manager.h  util.h
librefrakt/include/librefrakt/image/: converter.h  denoiser.h  tonemapper.h
librefrakt/include/librefrakt/traits/: hashable.h  noncopyable.h
librefrakt/include/librefrakt/util/: color.h  cuda.h  factory.h  gpuinfo.h  hash.h  nvenc.h  nvjpeg.h  platform.h  string.h  zlib.h
librefrakt/src/: animators.cpp  eznve.cpp  flame_compiler.cpp  flame_info.cpp  flame_types.cpp  kernel_manager.cpp
librefrakt/src/image/: denoiser.cpp
librefrakt/src/util/: color.cpp  cuda.cpp  filesystem.cpp  gpuinfo.cpp  hash.cpp  nvenc.cpp  nvjpeg.cpp  platform.cpp  string.cpp  zlib.cpp
refrakt-gui/: CMakeLists.txt
refrakt-gui/include/: gl.h  gui.h  pch.h
refrakt-gui/include/gui/panels/: preview_panel.h
refrakt-gui/src/: gl.cpp  gui_styles.cpp  refrakt_gui.cpp
refrakt-gui/src/gui/panels/: preview_panel.cpp
refrakt-server/: CMakeLists.txt
refrakt-server/src/: refrakt-server.cpp
refrakt-server/static/: muxer.html
refraktor/: CMakeLists.txt
refraktor/src/: refraktor.cpp
src/librefrakt/: CMakeLists.txt  README.md
src/librefrakt/depend/eznve/: CMakeLists.txt
src/librefrakt/depend/eznve/include/: eznve.hpp
src/librefrakt/depend/eznve/src/: eznve.cpp
src/librefrakt/depend/ezrtc/: CMakeLists.txt
src/librefrakt/depend/ezrtc/include/: ezrtc.h
src/librefrakt/depend/ezrtc/src/: ezrtc.cpp
src/librefrakt/depend/flang/: CMakeLists.txt  README.md
src/librefrakt/depend/flang/include/flang/: ast.h  grammar.h  matcher.h
src/librefrakt/depend/flang/src/: grammar.cpp  matcher.cpp
src/librefrakt/depend/optix_downloader/: CMakeLists.txt  download_optix_header.py
src/librefrakt/depend/roccu/: CMakeLists.txt  README.md
src/librefrakt/depend/roccu/include/: roccu.h  roccu_cpp_types.h  roccu_vector_types.h
src/librefrakt/depend/roccu/src/: roccu.cpp
src/librefrakt/include/librefrakt/: allocators.h  anima.h  animators.h  constants.h  cuda_buffer.h  factory.h  flame_compiler.h  flame_info.h  flame_types.h  gpu_buffer.h  util.h
src/librefrakt/include/librefrakt/image/: converter.h  denoiser.h  tonemapper.h
src/librefrakt/include/librefrakt/interface/: denoiser.h  jpeg_encoder.h  mp4_muxer.h
src/librefrakt/include/librefrakt/traits/: hashable.h
src/librefrakt/include/librefrakt/util/: color.h  cuda.h  filesystem.h  gpuinfo.h  hash.h  http.h  nvjpeg.h  stb.h  zlib.h
src/librefrakt/src/: anima.cpp  animators.cpp  flame_compiler.cpp  flame_info.cpp  flame_types.cpp
src/librefrakt/src/image/: denoiser.cpp  tonemapper.cpp
src/librefrakt/src/impl/denoiser/: null_denoiser.cpp  oidn_denoiser.cpp  optix_denoiser.cpp
src/librefrakt/src/impl/jpeg_encoder/: cpu_jpeg_encoder.cpp  nvjpeg.cpp
src/librefrakt/src/impl/mp4_muxer/: ffmpeg_muxer.cpp
src/librefrakt/src/util/: color.cpp  cuda.cpp  filesystem.cpp  gpuinfo.cpp  hash.cpp  http.cpp  nvjpeg.cpp  stb.cpp  zlib.cpp
src/refrakt-gui/: CMakeLists.txt
src/refrakt-gui/depend/imftw/: CMakeLists.txt  README.md
src/refrakt-gui/depend/imftw/cmake/: glfw_hdr.patch  imgui_hdr.patch
src/refrakt-gui/depend/imftw/include/imftw/: gui.h  imftw.h  kvstore.h  signals.h
src/refrakt-gui/depend/imftw/src/: events.cpp  events.h  imftw.cpp  imftw_internal.h  signals.cpp  signals_internal.h
src/refrakt-gui/include/: command_executor.h  gl.h  gui.h  pch.h
src/refrakt-gui/include/gui/modals/: render_modal.h
src/refrakt-gui/include/gui/panels/: flame_editor.h  preview_panel.h  timeline.h
src/refrakt-gui/src/: command_executor.cpp  gl.cpp  gui_styles.cpp  refrakt_gui.cpp
src/refrakt-gui/src/gui/modals/: render_modal.cpp
src/refrakt-gui/src/gui/panels/: flame_editor.cpp  preview_panel.cpp  timeline.cpp
src/refrakt-server/: CMakeLists.txt
src/refrakt-server/src/: refrakt-server.cpp
src/refraktor/: CMakeLists.txt
src/refraktor/src/: refraktor.cpp
src/thumbnail-provider-win/: CMakeLists.txt
src/thumbnail-provider-win/src/: dll.cpp  refrakt_thumbnail_provider.cpp
